Created Paddle Class, more to be added, testing Discord Bot

--- a/TheLastBrickBreaker.uproject
+++ b/TheLastBrickBreaker.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "TheLastBrickBreaker",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
