--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/Sandbox.Sandbox
+GlobalDefaultGameMode=/Game/Blueprints/BP_BrickBreakerBaseGameMode.BP_BrickBreakerBaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
