Updated DefaultEngine.ini & Changed Folder Structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/Sandbox.Sandbox
-GlobalDefaultGameMode=/Game/Blueprints/BP_BrickBreakerBaseGameMode.BP_BrickBreakerBaseGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_BrickBreakerBaseGameMode.BP_BrickBreakerBaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -86,4 +86,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
