--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/Sandbox.Sandbox
 EditorStartupMap=/Game/Levels/Sandbox.Sandbox
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_BrickBreakerBaseGameMode.BP_BrickBreakerBaseGameMode_C
 
